--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -19,14 +19,26 @@ A proton with such scattering angles, emerging from the vertex $(x^*$, $y^*)$ wi
 \label{eq:prot trans}
 	x = L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ ,\qquad y = L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
 \end{equation}
-given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions 
-(i.e.~$\xi = 0$), the dispersion terms can be ignored for this process.
+given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. The dispersion terms can be ignored for elastic scattering: 
+\begin{itemize}
+\item The protons lose no momentum in elastic collisions 
+(i.e. $\xi = 0$).
+\item Due to the collinearity of the two elastically scattered protons and 
+the symmetry of the optics of the two beams, the effects of 
+beam energy offsets and fluctuations ($\sigma(\xi) \sim 10^{-3}$ and $10^{-4}$, 
+respectively) on the reconstructed scattering angle (Eq.~(\ref{eq:th t}) in 
+Section~\ref{sec:kinematics})
+are strongly suppressed. Residual effects from optics imperfections have
+been verified to be negligible compared to all other uncertainties.
+\end{itemize}
 
-For the reported measurement, a special $\beta^* = 90\un{m}$ optics was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$ \cite{epl96}, see Table~\ref{tab:optics} for details. In the vertical plane, it features parallel-to-point focussing ($v_y \approx 0$) and large effective length $L_y$. In the horizontal plane, the almost vanishing effective length $L_x$ simplifies the separation of elastic and diffractive events: any sizeable horizontal displacement must be due to a momentum loss $\xi$.
+
+For the reported measurement, a special optics with $\beta^* = 90\un{m}$ was used, with essentially the same characteristics as at $\sqrt s = 7\un{TeV}$~\cite{epl96}, see Table~\ref{tab:optics} for details. In the vertical plane, it features parallel-to-point focussing ($v_y \approx 0$) and large effective length $L_y$. In the horizontal plane, the almost vanishing effective length $L_x$ simplifies the separation of elastic and diffractive events: any sizeable horizontal displacement must be due to a momentum loss $\xi$.
 
 \begin{table}
 \caption{
-Optical functions for elastic proton transport. The values refer to the right arm, for the left one they are very similar.
+Optical functions for elastic proton transport. The values refer to the right arm; for the left arm the moduli are very similar, but $L_{x}$ and $L_{y}$ have
+the opposite sign.
 % (after optics matching)
 }
 \label{tab:optics}
