--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -85,8 +85,8 @@ proton-proton interactions \sep elastic scattering \sep total cross-section \sep
 
 \bibitem{plb115} \Name{M. Ambrosio et al.} \REVIEW{Phys.~Lett.}{B115}{1982}{495}
 
-\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}
-
+\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}, 
+erratum \REVIEW{Nucl.~Phys.}{B148}{1979}{538}
 \bibitem{npb248} \Name{A. Breakstone et al.} \REVIEW{Nucl.~Phys.}{B248}{1984}{253}
 
 \bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}
