added paragraph on beam-momentum uncertainty
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10487 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -138,6 +138,25 @@ erratum \REVIEW{Nucl.~Phys.}{B148}{1979}{538}
     CERN-THESIS-2008-080,
 	\url{http://cds.cern.ch/record/1131825}
 
+\bibitem{lhc-note-334}
+	\Name{J.~Wenninger}
+	LHC-PROJECT-NOTE-334,
+	\url{https://cds.cern.ch/record/708939}
+
+\bibitem{lhc-note-326}
+	\Name{L.~Bottura~\etal{}}
+	LHC-PROJECT-NOTE-326,
+	\url{https://cds.cern.ch/record/691774}
+
+\bibitem{fidel}
+	FiDel: the Field Model of the LHC,\\
+	\url{http://lhc-div-mms.web.cern.ch/lhc-div-mms/tests/MAG/Fidel/}
+
+\bibitem{cern-ats-2013-040}
+	\Name{J.~Wenninger}
+	CERN-ATS-2013-040,
+	\url{https://cds.cern.ch/record/1546734}
+
 \bibitem{lafferty94}
  	% Where to stick your data points: The treatment of measurements within wide bins
 	\Name{G.~D.~Lafferty~and T.R.~Wyatt}
@@ -148,6 +167,5 @@ erratum \REVIEW{Nucl.~Phys.}{B148}{1979}{538}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
 \end{thebibliography}
-
 
 \end{document}
