added: robustness agains some systematics, changed: outlook for coulomb studies
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10490 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -12,9 +12,6 @@ $t = 0$, yields total cross-section values compatible with the previous measurem
 neglecting the effects due to the Coulomb interaction.
 
 In an upcoming analysis, this proof of non-exponentiality in a 
-$t$-domain strongly
-dominated by hadronic interactions will be combined with a measurement of 
-elastic scattering in the Coulomb-nuclear interference region, aiming at 
-constraints on the phenomenological description of the hadronic phase and of 
-the interference mechanism.
-
+$t$-domain strongly dominated by hadronic interactions will be combined with a measurement of 
+elastic scattering in the Coulomb-nuclear interference region,
+thus allowing to study the role of the Coulomb interaction in the non-exponential behaviour.
