--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -26,7 +26,7 @@ given by the optical functions: effective length $L$, magnification $v$ and disp
 \item Due to the collinearity of the two elastically scattered protons and 
 the symmetry of the optics of the two beams, the effects of 
 beam energy offsets and fluctuations ($\sigma(\xi) \sim 10^{-3}$ and $10^{-4}$, 
-respectively) on the reconstructed scattering angle (Eq.~(\ref{eq:th t}) in 
+respectively, \TODO{reference to Eq.~(\ref{eq:bmom unc}) ??}) on the reconstructed scattering angle (Eq.~(\ref{eq:th t}) in 
 Section~\ref{sec:kinematics})
 are strongly suppressed. Residual effects from optics imperfections have
 been verified to be negligible compared to all other uncertainties.
