--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -143,10 +143,14 @@ erratum \REVIEW{Nucl.~Phys.}{B148}{1979}{538}
 	LHC-PROJECT-NOTE-334,
 	\url{https://cds.cern.ch/record/708939}
 
-\bibitem{lhc-note-326}
-	\Name{L.~Bottura~\etal{}}
-	LHC-PROJECT-NOTE-326,
-	\url{https://cds.cern.ch/record/691774}
+%\bibitem{lhc-note-326}
+%	\Name{L.~Bottura~\etal{}}
+%	LHC-PROJECT-NOTE-326,
+%	\url{https://cds.cern.ch/record/691774}
+
+\bibitem{bottura-pac09} 
+        \Name{L. Bottura et al.}
+        Proceedings of PAC09, Vancouver 2009, contribution MO6PFP046.
 
 \bibitem{fidel}
 	FiDel: the Field Model of the LHC,\\
