new authors added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10526 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_data.tex
+++ b/2014/90m paper/authorlist_data.tex
@@ -9,6 +9,7 @@
 	\AddAuthor{E.~Bossini}{7b}{}{}%
 	\AddAuthor{U.~Bottigli}{7b}{}{}%
 	\AddAuthor{M.~Bozzo}{6a}{}{}%
+	\AddAuthor{P.~Broul\'{i}m}{1a}{}{}%
 	\AddAuthor{A.~Buzzo}{6a}{}{}%
 	\AddAuthor{F.~S.~Cafagna}{5a}{}{}%
 	\AddAuthor{C.~E.~Campanella}{5c}{5a}{}%
@@ -37,6 +38,7 @@
 	\AddAuthor{S.~Lami}{7a}{}{}%
 	\AddAuthor{G.~Latino}{7b}{}{}%
 	\AddAuthor{R.~Lauhakangas}{3a}{}{}%
+	\AddAuthor{R.~Linhart}{1a}{}{}%
 	\AddAuthor{E.~Lippmaa}{2}{}{}%
 	\AddAuthor{J.~Lippmaa}{2}{}{}%
 	\AddAuthor{M.~V.~Lokaj\'{\i}\v{c}ek}{1b}{}{}%
@@ -56,6 +58,7 @@
 	\AddAuthor{M.~Oriunno}{}{}{f}%
 	\AddAuthor{K.~\"{O}sterberg}{3a}{3b}{}%
 	\AddAuthor{P.~Palazzi}{9}{}{}%
+	\AddAuthor{L.~Palo\v{c}ko}{1a}{}{}%
 	\AddAuthor{V.~Passaro}{5c}{5a}{}%
 	\AddAuthor{Z.~Peroutka}{1a}{}{}%
 	\AddAuthor{V.~Petruzzelli}{5c}{5a}{}%
