reviewed Mario's texts
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10633 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -17,7 +17,7 @@ The beam optics relates the proton state at the IP to its state at the RP locati
 A proton emerging from the vertex $(x^*$, $y^*)$ at the angle $(\theta_x^*,\theta_y^*)$ and with momentum  $p (1 +  \xi)$, where $p$ is the nominal initial-state proton momentum, arrives at the RPs in a transverse position
 \begin{equation}
 \label{eq:prot trans}
-	x(z_{\rm RP}) = L_x(z_{\rm RP})\, \theta_x^* + v_x(z_{\rm RP})\, x^* + D_x(z_{\rm RP})\, \xi\ ,\qquad y(z_{\rm RP}) = L_y(z_{\rm RP})\, \theta_y^* + v_y(z_{\rm RP})\, y^* + D_y(z_{\rm RP})\, \xi \quad
+	x(z_{\rm RP}) = L_x(z_{\rm RP})\, \theta_x^*\ +\ v_x(z_{\rm RP})\, x^*\ +\ D_x(z_{\rm RP})\, \xi\ ,\quad y(z_{\rm RP}) = L_y(z_{\rm RP})\, \theta_y^*\ +\ v_y(z_{\rm RP})\, y^*\ +\ D_y(z_{\rm RP})\, \xi \quad
 \end{equation}
 relative to the beam centre. This position is determined by the optical functions: effective length $L_{x,y}(z)$, magnification $v_{x,y}(z)$ and dispersion $D_{x,y}(z)$. 
 The relative final-state momentum deviation $\xi$ has the following 
@@ -25,7 +25,7 @@ contributions:
 \begin{itemize}
 \item Beam momentum offsets $\xi_{\rm off}$ relative to the nominal momentum 
 and time-dependent variations, $\xi_{\rm var}$, with 
-$\sigma(xi_{\rm off}) \sim 10^{-3}$ and $\sigma(\xi_{\rm var}) \sim 10^{-4}$ 
+$\sigma(\xi_{\rm off}) \sim 10^{-3}$ and $\sigma(\xi_{\rm var}) \sim 10^{-4}$ 
 (see discussion in Section~\ref{sec:systematics}).
 \item The momentum loss, $\xi_{\rm scatt}$, in diffractive scattering processes.
 \end{itemize}
