fixed labels of the splitted section on systematics
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10634 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -26,7 +26,7 @@ contributions:
 \item Beam momentum offsets $\xi_{\rm off}$ relative to the nominal momentum 
 and time-dependent variations, $\xi_{\rm var}$, with 
 $\sigma(\xi_{\rm off}) \sim 10^{-3}$ and $\sigma(\xi_{\rm var}) \sim 10^{-4}$ 
-(see discussion in Section~\ref{sec:systematics}).
+(see discussion in Section~\ref{sec:beam en unc}).
 \item The momentum loss, $\xi_{\rm scatt}$, in diffractive scattering processes.
 \end{itemize}
 For elastic scattering the dispersion terms, $D_{x,y}\, \xi$, can be ignored: 
