--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -345,8 +345,7 @@ Two binnings have been considered. The ``optimised'' option sets the bin size to
 %-------------------------
 
 \subsubsection{Beam Energy Uncertainty}
-%\subsubsection{Systematic Uncertainties}
-\label{sec:systematics}
+\label{sec:beam en unc}
 
 Besides the systematic uncertainties mentioned at the above analysis steps, the uncertainty of the beam momentum needs to be considered when the scattering angles are translated into $t$, see Eq.~(\ref{eq:th t}). The beam momentum at 
 $\sqrt{s}=8\,$TeV is derived from the current-to-field calibration functions of the LHC dipole magnets (see Section~4 in~\cite{lhc-note-334}, Section~3.1 in~\cite{cern-ats-2013-040}), yielding a relative momentum uncertainty of $0.07\un{\%}$. Taking into account a further contribution of $0.02\un{\%}$ from quadrupole misalignments, the total relative beam momentum uncertainty amounts to $0.1\un{\%}$, which is the value used in the present analysis.
@@ -356,7 +355,11 @@ Another confirmation is given in \cite{cern-ats-2013-040} (Eq.~(29)), where an a
 
 Finally, energy variations with time during a fill do not exceed $\pm 0.03\un{\%}$ (Section~10 in~\cite{cern-ats-2013-040}) and are hence negligible.
 
+%-------------------------
+
 \subsubsection{Propagation of Systematic Uncertainties}
+\label{sec:systematics propagation}
+
 The systematic effects are propagated to the $t$-distribution with help of a Monte-Carlo simulation. A fit of the final differential cross-section data is used to generate the true $t$-distribution. Simultaneously, another $t$-distribution is built, having introduced one of the above mentioned systematic effects at $1\un{\sigma}$ level. The difference between the $t$-distributions gives the systematic effect on the differential cross-section. Formally, this procedure is equivalent to evaluating
 \begin{equation}
 \label{eq:syst mode}
