--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -12,7 +12,7 @@ A proton with such scattering angles, emerging from the vertex $(x^*$, $y^*)$ wi
 	x = L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ ,\qquad y = L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
 \end{equation}
 given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions 
-(i.e. $\xi = 0$), the dispersion terms are irrelevant for this process.
+(i.e. $\xi = 0$), the dispersion terms are irrelevant for this process. \TODO{Comment on energy uncertainty + reference to details in the 90m paper}
 
 The special optics characterised by $\beta^{*} = 1000\,$m~\footnote{$\beta^{*}$ is the value of the $\beta$-function at the interaction point; for the practical purposes of this article, it can be considered as a name label for the optics configuration.}
 has been specifically developed for measuring low-$|t|$ elastic scattering.
