--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -394,7 +394,7 @@ In addition, the complete analysis chain has been applied in two independent ana
 Impact of $t$-dependent systematic effects on the differential cross-section. Each curve corresponds to a systematic error at $1\un{\sigma}$, cf.~Eq.~(\ref{eq:syst mode}).
 The two contributions due to optics correspond to the two vectors in Eq.~(\ref{eq:opt bias modes}).
 The envelope is determined by summing all shown contributions in quadrature for each $|t|$ value.
-The right plot provides a vertical zoom; note that the envelope is out of scale.
+The right-hand plot provides a vertical zoom; note that the envelope is out of scale.
 }
 \label{fig:syst unc}
 \end{center}
