--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -18,7 +18,7 @@ Differential cross-section using ``optimised'' binning, as given in Table~\ref{t
 \end{figure}
 
 
-The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and Figure \ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential (pure exponential fit using statistical uncertainties only). This plot immediately suggests a non-exponentiality of the data: pure exponentials would look like (almost) linear functions in this kind of representation.
+The final differential cross-section in the ``optimised'' binning is presented in Table~\ref{tab:data} and \linebreak Figure~\ref{fig:data ob}. In order to visualise small deviations from the leading pure-exponential behaviour, Figure~\ref{fig:data rel ob} shows the relative difference of the cross-section from a reference exponential (pure exponential fit using statistical uncertainties only). This plot immediately suggests a non-exponentiality of the data: pure exponentials would look like (almost) linear functions in this kind of representation.
 
 To study the detailed behaviour of the differential cross-section, a series of fits has been made using the parametrisation:
 \begin{equation}
@@ -149,4 +149,4 @@ Differential cross-section using the ``per-mille'' binning and plotted as relati
 \end{center}
 \end{figure*}
 
-Finally, it should be emphasized that the above exlusion of purely exponential behaviour is entirely robust against ceratin systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
+Finally, it should be emphasized that the above exclusion of purely exponential behaviour is entirely robust against ceratin systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
