added note on ignoring the dispersion terms
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10657 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -6,13 +6,12 @@ The beam optics relates the proton state at the IP to its state at the RP locati
 \label{eq:scatt angle}
 \theta_x^* = \theta^* \cos\phi^*\ ,\qquad \theta_y^* = \theta^* \sin\phi^*\ .
 \end{equation}
-A proton with such scattering angles, emerging from the vertex $(x^*$, $y^*)$ with relative momentum loss $\xi \equiv \Delta p / p$ arrives at the RPs with transverse position
+A proton with such scattering angles, emerging at the vertex $(x^*$, $y^*)$ with momentum $p\,(1+\xi)$, where $p$ is the nominal initial-state proton momentum, arrives at the RPs in a transverse position
 \begin{equation}
 \label{eq:prot trans}
 	x = L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ ,\qquad y = L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
 \end{equation}
-given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions 
-(i.e. $\xi = 0$), the dispersion terms are irrelevant for this process. \TODO{Comment on energy uncertainty + reference to details in the 90m paper}
+with respect to the beam centre. The position is determined by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions, the values of $\xi$ follow from the initial state momentum offset and variations, see Section 4 in \cite{8tev-90m}. Due to the collinearity of the two elastically scattered protons and the symmetry of the optics, the impact of the dispersion terms $D\,\xi$ on the reconstructed scattering angles (Eq.~(\ref{eq:kin 2a})) is negligible compared to other uncertainties and thus the terms can be ignored.
 
 The special optics characterised by $\beta^{*} = 1000\,$m~\footnote{$\beta^{*}$ is the value of the $\beta$-function at the interaction point; for the practical purposes of this article, it can be considered as a name label for the optics configuration.}
 has been specifically developed for measuring low-$|t|$ elastic scattering.
