added report numbers
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10730 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/elastic_90m_cern.tex
+++ b/2014/90m paper/elastic_90m_cern.tex
@@ -32,11 +32,11 @@
 
 \renewcommand{\EXPLOGO}{logo_totem_black.pdf}
 
-\PHnumber{XXXX}
-\PHdate{XXXX}
+\PHnumber{2015-083}
+\PHdate{23 July 2015}
 
-\EXPnumber{XXXX}
-\EXPdate{XXXX}
+\EXPnumber{TOTEM-2015-001}
+\EXPdate{23 July 2015}
 
 \hbox{}
 \vskip-21mm
