revised version submitted to NPB
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10731 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -149,4 +149,4 @@ Differential cross-section using the ``per-mille'' binning and plotted as relati
 \end{center}
 \end{figure*}
 
-Finally, it should be emphasized that the above exclusion of purely exponential behaviour is entirely robust against ceratin systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
+Finally, it should be emphasized that the above exclusion of purely exponential behaviour is entirely robust against certain systematic errors, most notably normalisation and beam momentum offset. The former can only affect the intercept $\d\sigma/\d t|_{t=0}$, the latter can also scale the parameters $b_i$. However, none of them can bring the parameters $b_2$ and $b_3$ to zero or vice versa.
